--- a/code/bi_lstm.ipynb
+++ b/code/bi_lstm.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-24T19:46:35.670906300Z",
-     "start_time": "2023-07-24T19:46:21.239303400Z"
+     "end_time": "2023-07-24T19:57:41.005355200Z",
+     "start_time": "2023-07-24T19:57:04.856495200Z"
     }
    },
    "outputs": [
@@ -15,60 +15,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.6294892601966858\n",
-      "Validation loss decreased (0.585445 --> 0.585445).  Saving model ...\n",
-      "Epoch 2, Loss: 0.5629972871780395\n",
-      "Validation loss decreased (0.544927 --> 0.544927).  Saving model ...\n",
-      "Epoch 3, Loss: 0.5331983444213867\n",
-      "Validation loss decreased (0.522514 --> 0.522514).  Saving model ...\n",
-      "Epoch 4, Loss: 0.5151783133983612\n",
-      "Validation loss decreased (0.507736 --> 0.507736).  Saving model ...\n",
-      "Epoch 5, Loss: 0.5028206956863404\n",
-      "Validation loss decreased (0.497115 --> 0.497115).  Saving model ...\n",
-      "Epoch 6, Loss: 0.49378627467155456\n",
+      "Epoch 1, Loss: 0.5077714228630066\n",
+      "Validation loss decreased (0.460342 --> 0.460342).  Saving model ...\n",
+      "Epoch 2, Loss: 0.45646918864250186\n",
+      "Validation loss decreased (0.449592 --> 0.449592).  Saving model ...\n",
+      "Epoch 3, Loss: 0.4494832589387894\n",
       "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 7, Loss: 0.48691124415397646\n",
-      "Validation loss decreased (0.482821 --> 0.482821).  Saving model ...\n",
-      "Epoch 8, Loss: 0.48152315335273743\n",
-      "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 9, Loss: 0.4771992590904236\n",
+      "Epoch 4, Loss: 0.4444856627225876\n",
       "EarlyStopping counter: 2 out of 5\n",
-      "Epoch 10, Loss: 0.47365939216613767\n",
-      "Validation loss decreased (0.470224 --> 0.470224).  Saving model ...\n",
-      "Epoch 11, Loss: 0.47071084566116334\n",
+      "Epoch 5, Loss: 0.4404243407249451\n",
+      "Validation loss decreased (0.436847 --> 0.436847).  Saving model ...\n",
+      "Epoch 6, Loss: 0.4370722928762436\n",
       "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 12, Loss: 0.4682171998023987\n",
+      "Epoch 7, Loss: 0.4341897609949112\n",
       "EarlyStopping counter: 2 out of 5\n",
-      "Epoch 13, Loss: 0.46607965841293336\n",
+      "Epoch 8, Loss: 0.43155703101158144\n",
       "EarlyStopping counter: 3 out of 5\n",
-      "Epoch 14, Loss: 0.4642252393245697\n",
+      "Epoch 9, Loss: 0.4290436578273773\n",
       "EarlyStopping counter: 4 out of 5\n",
-      "Epoch 15, Loss: 0.46259907467365263\n",
-      "Validation loss decreased (0.459029 --> 0.459029).  Saving model ...\n",
-      "Epoch 16, Loss: 0.46115930309295655\n",
-      "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 17, Loss: 0.45987353920936586\n",
-      "EarlyStopping counter: 2 out of 5\n",
-      "Epoch 18, Loss: 0.45871641390323636\n",
-      "EarlyStopping counter: 3 out of 5\n",
-      "Epoch 19, Loss: 0.4576678162097931\n",
-      "EarlyStopping counter: 4 out of 5\n",
-      "Epoch 20, Loss: 0.4567116370677948\n",
+      "Epoch 10, Loss: 0.4265789274692535\n",
       "EarlyStopping counter: 5 out of 5\n",
       "Early stopping\n",
-      "Test Loss: 0.4556689285230637, Accuracy: 0.76944\n"
+      "Test Loss: 0.4347554003953934, Accuracy: 0.77732\n"
      ]
     }
    ],
    "source": [
     "from dataProcessing import *\n",
-    "import numpy as np\n",
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch import nn\n",
     "from torch.nn.functional import binary_cross_entropy_with_logits as bce_loss\n",
     "from torch.optim import Adam\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "class EarlyStopping:\n",
+    "    def __init__(self, patience=5, delta=0):\n",
+    "        self.patience = patience\n",
+    "        self.counter = 0\n",
+    "        self.best_score = None\n",
+    "        self.delta = delta\n",
+    "        self.early_stop = False\n",
+    "\n",
+    "    def __call__(self, val_loss, model):\n",
+    "        score = -val_loss\n",
+    "        if self.best_score is None:\n",
+    "            self.best_score = score\n",
+    "            self.save_checkpoint(val_loss, model)\n",
+    "        elif score < self.best_score + self.delta:\n",
+    "            self.counter += 1\n",
+    "            print(f'EarlyStopping counter: {self.counter} out of {self.patience}')\n",
+    "            if self.counter >= self.patience:\n",
+    "                self.early_stop = True\n",
+    "        else:\n",
+    "            self.best_score = score\n",
+    "            self.save_checkpoint(val_loss, model)\n",
+    "            self.counter = 0\n",
+    "\n",
+    "    def save_checkpoint(self, val_loss, model):\n",
+    "        torch.save(model.state_dict(), 'checkpoint.pt')\n",
+    "        print(f'Validation loss decreased ({-self.best_score:.6f} --> {val_loss:.6f}).  Saving model ...')\n",
+    "\n",
+    "class Classifier(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, num_layers, bidirectional, dropout):\n",
+    "        super(Classifier, self).__init__()\n",
+    "        self.lstm = nn.LSTM(input_dim, hidden_dim, num_layers=num_layers,\n",
+    "                            bidirectional=bidirectional, dropout=dropout, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim*2 if bidirectional else hidden_dim, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.unsqueeze(1) # Add sequence length dimension\n",
+    "        lstm_out, (hidden, cell) = self.lstm(x)\n",
+    "        if self.lstm.bidirectional:\n",
+    "            hidden = torch.cat((hidden[-2,:,:], hidden[-1,:,:]), dim = 1)\n",
+    "        else:\n",
+    "            hidden = hidden[-1,:,:]\n",
+    "        output = self.fc(hidden).squeeze()\n",
+    "        return output\n",
     "\n",
     "batch_size = 32\n",
     "train_texts = np.load('../p_data/train_texts.npy', allow_pickle=True)\n",
@@ -96,52 +119,16 @@
     "val_loader = DataLoader(VectorDataset(val_data, val_labels), batch_size)\n",
     "test_loader = DataLoader(VectorDataset(test_data, test_labels), batch_size)\n",
     "\n",
-    "#Define the early stop\n",
-    "class EarlyStopping:\n",
-    "    def __init__(self, patience=5, delta=0):\n",
-    "        self.patience = patience\n",
-    "        self.counter = 0\n",
-    "        self.best_score = None\n",
-    "        self.delta = delta\n",
-    "        self.early_stop = False\n",
-    "\n",
-    "    def __call__(self, val_loss, model):\n",
-    "\n",
-    "        score = -val_loss\n",
-    "\n",
-    "        if self.best_score is None:\n",
-    "            self.best_score = score\n",
-    "            self.save_checkpoint(val_loss, model)\n",
-    "        elif score < self.best_score + self.delta:\n",
-    "            self.counter += 1\n",
-    "            print(f'EarlyStopping counter: {self.counter} out of {self.patience}')\n",
-    "            if self.counter >= self.patience:\n",
-    "                self.early_stop = True\n",
-    "        else:\n",
-    "            self.best_score = score\n",
-    "            self.save_checkpoint(val_loss, model)\n",
-    "            self.counter = 0\n",
-    "\n",
-    "    def save_checkpoint(self, val_loss, model):\n",
-    "        torch.save(model.state_dict(), 'checkpoint.pt')\n",
-    "        print(f'Validation loss decreased ({-self.best_score:.6f} --> {val_loss:.6f}).  Saving model ...')\n",
-    "\n",
-    "# Define the model\n",
-    "class Classifier(nn.Module):\n",
-    "    def __init__(self, input_dim):\n",
-    "        super(Classifier, self).__init__()\n",
-    "        self.fc = nn.Linear(input_dim, 1)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return self.fc(x).squeeze()\n",
-    "\n",
-    "# Define device,early stop object, model, optimizer and loss\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "early_stopping = EarlyStopping(patience=5, delta=0.01)\n",
-    "model = Classifier(input_dim=100).to(device)  # input_dim is the size of word vectors\n",
+    "hidden_dim = 128\n",
+    "num_layers = 2\n",
+    "bidirectional = True\n",
+    "dropout = 0.5\n",
+    "model = Classifier(input_dim=100, hidden_dim=hidden_dim, num_layers=num_layers,\n",
+    "                   bidirectional=bidirectional, dropout=dropout).to(device)\n",
     "optimizer = Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# Training\n",
     "model.train()\n",
     "for epoch in range(50):\n",
     "    total_loss = 0\n",
@@ -170,17 +157,14 @@
     "            val_count += inputs.size(0)\n",
     "    val_loss /= val_count\n",
     "\n",
-    "    # updatae early stop\n",
     "    early_stopping(val_loss, model)\n",
     "\n",
     "    if early_stopping.early_stop:\n",
     "        print(\"Early stopping\")\n",
     "        break\n",
     "\n",
-    "# load model\n",
     "model.load_state_dict(torch.load('checkpoint.pt'))\n",
     "\n",
-    "# Evaluation\n",
     "model.eval()\n",
     "total_loss = 0\n",
     "total_count = 0\n",
@@ -201,17 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\76219\\AppData\\Local\\Temp\\ipykernel_34528\\632336586.py:42: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\76219\\AppData\\Local\\Temp\\ipykernel_31448\\3156636974.py:42: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  train_data = [torch.tensor(vec) for vec in train_data]\n",
-      "C:\\Users\\76219\\AppData\\Local\\Temp\\ipykernel_34528\\632336586.py:43: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\76219\\AppData\\Local\\Temp\\ipykernel_31448\\3156636974.py:43: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  val_data = [torch.tensor(vec) for vec in val_data]\n",
-      "C:\\Users\\76219\\AppData\\Local\\Temp\\ipykernel_34528\\632336586.py:44: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\76219\\AppData\\Local\\Temp\\ipykernel_31448\\3156636974.py:44: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  test_data = [torch.tensor(vec) for vec in test_data]\n"
      ]
     },
@@ -219,42 +203,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.6159139949302018\n",
-      "Validation loss decreased (0.560258 --> 0.560258).  Saving model ...\n",
-      "Epoch 2, Loss: 0.556651109461669\n",
+      "Epoch 1, Loss: 0.6055511006333696\n",
+      "Validation loss decreased (0.552904 --> 0.552904).  Saving model ...\n",
+      "Epoch 2, Loss: 0.5474187473967892\n",
       "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 3, Loss: 0.5521489124480492\n",
+      "Epoch 3, Loss: 0.5299750655819716\n",
+      "Validation loss decreased (0.500112 --> 0.500112).  Saving model ...\n",
+      "Epoch 4, Loss: 0.5071744214827711\n",
+      "EarlyStopping counter: 1 out of 5\n",
+      "Epoch 5, Loss: 0.49003544345114214\n",
       "EarlyStopping counter: 2 out of 5\n",
-      "Epoch 4, Loss: 0.5487034564414683\n",
+      "Epoch 6, Loss: 0.44576130850439794\n",
+      "Validation loss decreased (0.398613 --> 0.398613).  Saving model ...\n",
+      "Epoch 7, Loss: 0.35255462219713257\n",
+      "Validation loss decreased (0.292701 --> 0.292701).  Saving model ...\n",
+      "Epoch 8, Loss: 0.2710202895599264\n",
+      "Validation loss decreased (0.234735 --> 0.234735).  Saving model ...\n",
+      "Epoch 9, Loss: 0.175788465465632\n",
+      "Validation loss decreased (0.167042 --> 0.167042).  Saving model ...\n",
+      "Epoch 10, Loss: 0.13381583510573072\n",
+      "EarlyStopping counter: 1 out of 5\n",
+      "Epoch 11, Loss: 0.05499133537468921\n",
+      "Validation loss decreased (-0.126494 --> -0.126494).  Saving model ...\n",
+      "Epoch 12, Loss: -0.17423718325520382\n",
+      "Validation loss decreased (-0.247355 --> -0.247355).  Saving model ...\n",
+      "Epoch 13, Loss: -0.1324423671140976\n",
+      "EarlyStopping counter: 1 out of 5\n",
+      "Epoch 14, Loss: -0.3681302408656508\n",
+      "EarlyStopping counter: 2 out of 5\n",
+      "Epoch 15, Loss: -0.3384922800540552\n",
+      "Validation loss decreased (-0.449877 --> -0.449877).  Saving model ...\n",
+      "Epoch 16, Loss: -0.6190597885619096\n",
+      "Validation loss decreased (-0.709903 --> -0.709903).  Saving model ...\n",
+      "Epoch 17, Loss: -0.7242963849148836\n",
+      "EarlyStopping counter: 1 out of 5\n",
+      "Epoch 18, Loss: -0.8999232727042592\n",
+      "Validation loss decreased (-0.883866 --> -0.883866).  Saving model ...\n",
+      "Epoch 19, Loss: -0.6114761596727334\n",
+      "EarlyStopping counter: 1 out of 5\n",
+      "Epoch 20, Loss: 10.961164469834326\n",
+      "EarlyStopping counter: 2 out of 5\n",
+      "Epoch 21, Loss: 1.677781220156173\n",
       "EarlyStopping counter: 3 out of 5\n",
-      "Epoch 5, Loss: 0.5409264640357697\n",
-      "Validation loss decreased (0.538694 --> 0.538694).  Saving model ...\n",
-      "Epoch 6, Loss: 0.5248328987087336\n",
-      "Validation loss decreased (0.518839 --> 0.518839).  Saving model ...\n",
-      "Epoch 7, Loss: 0.48604840854478015\n",
-      "Validation loss decreased (0.491992 --> 0.491992).  Saving model ...\n",
-      "Epoch 8, Loss: 0.5092242766785305\n",
-      "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 9, Loss: 0.5497615956217865\n",
-      "EarlyStopping counter: 2 out of 5\n",
-      "Epoch 10, Loss: 0.5115439672194636\n",
-      "Validation loss decreased (0.471065 --> 0.471065).  Saving model ...\n",
-      "Epoch 11, Loss: 0.46194633164506327\n",
-      "Validation loss decreased (0.368501 --> 0.368501).  Saving model ...\n",
-      "Epoch 12, Loss: 0.34556477452329504\n",
-      "Validation loss decreased (0.133701 --> 0.133701).  Saving model ...\n",
-      "Epoch 13, Loss: 0.44661866297115116\n",
-      "EarlyStopping counter: 1 out of 5\n",
-      "Epoch 14, Loss: 0.4412331473631937\n",
-      "EarlyStopping counter: 2 out of 5\n",
-      "Epoch 15, Loss: 0.37935041380896406\n",
-      "EarlyStopping counter: 3 out of 5\n",
-      "Epoch 16, Loss: 0.28579973327657565\n",
+      "Epoch 22, Loss: 0.6916358851995624\n",
       "EarlyStopping counter: 4 out of 5\n",
-      "Epoch 17, Loss: 0.5432502836291442\n",
+      "Epoch 23, Loss: 0.6682690925006286\n",
       "EarlyStopping counter: 5 out of 5\n",
       "Early stopping\n",
-      "Test Loss: 0.29221207924010756, Accuracy: 0.6370673952641166\n"
+      "Test Loss: -0.5851067545635452, Accuracy: 0.651183970856102\n"
      ]
     }
    ],
@@ -315,22 +311,28 @@
     "\n",
     "\n",
     "# Define the LSTM Classifier\n",
-    "class LSTMClassifier(nn.Module):\n",
+    "class BiLSTMClassifier(nn.Module):\n",
     "    def __init__(self, embedding_dim, hidden_dim):\n",
-    "        super(LSTMClassifier, self).__init__()\n",
+    "        super(BiLSTMClassifier, self).__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
-    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_dim, 1)\n",
+    "\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, batch_first=True, bidirectional=True)\n",
+    "\n",
+    "        self.fc = nn.Linear(2*hidden_dim, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        lstm_out, _ = self.lstm(x)\n",
-    "        out = self.fc(lstm_out[:, -1, :]).squeeze()\n",
+    "        # Split the final state into the forward and backward parts\n",
+    "        forward_final = lstm_out[:, -1, :self.hidden_dim]\n",
+    "        backward_final = lstm_out[:, 0, self.hidden_dim:]\n",
+    "        # Concatenate the final states and pass through the linear layer\n",
+    "        out = self.fc(torch.cat((forward_final, backward_final), dim=1)).squeeze()\n",
     "        return out\n",
     "\n",
     "# Define your LSTM model\n",
     "embedding_dim = 100  # This should match the dimension of your word2vec vectors\n",
     "hidden_dim = 100\n",
-    "model = LSTMClassifier(embedding_dim, hidden_dim).to(device)\n",
+    "model = BiLSTMClassifier(embedding_dim, hidden_dim).to(device)\n",
     "early_stopping = EarlyStopping(patience=5, delta=0.01)\n",
     "\n",
     "# Define loss function\n",
@@ -399,8 +401,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-24T19:54:56.408339100Z",
-     "start_time": "2023-07-24T19:54:38.249807600Z"
+     "end_time": "2023-07-24T20:00:58.946764700Z",
+     "start_time": "2023-07-24T20:00:16.019372800Z"
     }
    }
   },
